--- a/.github/workflows/build-exe.yml
+++ b/.github/workflows/build-exe.yml
@@ -28,7 +28,11 @@ jobs:
       run: pyinstaller --onefile --windowed --name "Pulse_v0.1" app.py
 
     - name: Upload artifact
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v4
       with:
+    name: Pulse_v0.1-Windows-Executable
+    path: dist/Pulse_v0.1.exe
+    retention-days: 7 # Опционально: сколько дней хранить артефакт3
+       with:
         name: Pulse_v0.1-Windows-Executable
         path: dist/Pulse_v0.1.exe
