--- a/.github/workflows/build-exe.yml
+++ b/.github/workflows/build-exe.yml
@@ -3,7 +3,7 @@ name: Build Windows Executable
 on:
   push:
     branches:
-      - main # Или master, если у тебя такая ветка
+      - main # Или master, если у тебя основная ветка называется master
   workflow_dispatch: # Позволяет запускать вручную из вкладки Actions
 
 jobs:
@@ -12,10 +12,10 @@ jobs:
 
     steps:
     - name: Checkout code
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4 # Обновлено до v4
 
     - name: Set up Python
-      uses: actions/setup-python@v4
+      uses: actions/setup-python@v5 # Обновлено до v5 (можно и v4, но v5 новее)
       with:
         python-version: '3.9' # Можно использовать '3.8', '3.10', '3.11'
 
@@ -28,11 +28,8 @@ jobs:
       run: pyinstaller --onefile --windowed --name "Pulse_v0.1" app.py
 
     - name: Upload artifact
-      uses: actions/upload-artifact@v4
+      uses: actions/upload-artifact@v4 # Обновлено до v4
       with:
-    name: Pulse_v0.1-Windows-Executable
-    path: dist/Pulse_v0.1.exe
-    retention-days: 7 # Опционально: сколько дней хранить артефакт3
-       with:
         name: Pulse_v0.1-Windows-Executable
         path: dist/Pulse_v0.1.exe
+        retention-days: 7 # Опционально: сколько дней хранить артефакт
