--- a/.github/workflows/build-exe.yml
+++ b/.github/workflows/build-exe.yml
@@ -12,23 +12,23 @@ jobs:
 
     steps:
     - name: Checkout code
-      uses: actions/checkout@v4 # Обновлено до v4
+      uses: actions/checkout@v4
 
     - name: Set up Python
-      uses: actions/setup-python@v5 # Обновлено до v5 (можно и v4, но v5 новее)
+      uses: actions/setup-python@v5
       with:
         python-version: '3.9' # Можно использовать '3.8', '3.10', '3.11'
 
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install pyinstaller flask pywebview
+        pip install pyinstaller flask pywebview xlwings # Добавили xlwings в установку
 
     - name: Build with PyInstaller
-      run: pyinstaller --onefile --windowed --name "Pulse_v0.1" app.py
+      run: pyinstaller --onefile --windowed --name "Pulse_v0.1" app.py --hidden-import xlwings # Добавили hidden-import
 
     - name: Upload artifact
-      uses: actions/upload-artifact@v4 # Обновлено до v4
+      uses: actions/upload-artifact@v4
       with:
         name: Pulse_v0.1-Windows-Executable
         path: dist/Pulse_v0.1.exe
