--- a/.github/workflows/build-exe.yml
+++ b/.github/workflows/build-exe.yml
@@ -22,10 +22,10 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install pyinstaller flask pywebview xlwings # Добавили xlwings в установку
+        pip install pyinstaller flask pywebview xlwings flask_mail # Добавлены xlwings и flask_mail
 
     - name: Build with PyInstaller
-      run: pyinstaller --onefile --windowed --name "Pulse_v0.1" app.py --hidden-import xlwings # Добавили hidden-import
+      run: pyinstaller --onefile --windowed --name "Pulse_v0.1" app.py --hidden-import xlwings --hidden-import flask_mail # Добавлены hidden-import
 
     - name: Upload artifact
       uses: actions/upload-artifact@v4
